[workspace]
members = [
    "dts-downloader",
    "type-generator",
    "github-webhook"
]

[workspace.package]
version = "0.2.4"
repository = "https://github.com/sksat/github-webhook-rs"
authors = ["sksat <sksat@sksat.net>", "s-ylide"]

[workspace.dependencies]
github-webhook-dts-downloader = { path = "./dts-downloader", version = "0.2" }
github-webhook-type-generator = { path = "./type-generator", version = "0.2" }
