[workspace]
resolver = "2"

members = [
    "dts-downloader",
    "type-generator",
    "github-webhook"
]

[workspace.package]
version = "0.5.0"
repository = "https://github.com/sksat/github-webhook-rs"
authors = ["sksat <sksat@sksat.net>", "s-ylide"]

# MSRV
rust-version = "1.64.0"

[workspace.dependencies]
github-webhook-dts-downloader = { path = "./dts-downloader", version = "0.5" }
github-webhook-type-generator = { path = "./type-generator", version = "0.5" }
