[package]
name = "github-webhook-dts-downloader"
version.workspace = true
rust-version.workspace = true
edition = "2021"

description = "GitHub webhook payload type def downloader for Rust"
repository.workspace = true
authors.workspace = true
license = "MIT"

[dependencies]
github-webhook-type-generator.workspace = true
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["blocking"] }
