[package]
name = "github-webhook-dts-downloader"
version.workspace = true
rust-version = "1.64.0"
edition = "2021"

description = "GitHub webhook payload type def downloader for Rust"
repository.workspace = true
authors.workspace = true
license = "MIT"

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.11.23", features = ["blocking"] }
