[package]
name = "github-webhook"
version = "0.2.0+v6.11.0"
edition = "2021"

build = "build.rs"

description = "GitHub Webhooks for Rust"
repository.workspace = true
authors.workspace = true
readme = "../README.md"
license = "MIT"
# TODO: how to notice https://github.com/octokit/webhooks/blob/v6.8.0/LICENSE (MIT)

[build-dependencies]
github-webhook-dts-downloader.workspace = true
anyhow = "1.0.71"

[dependencies]
serde = "1.0.163"
serde_json = "1.0.96"
