[package]
name = "github-webhook"
version = "0.2.2+v6.11.0"
edition = "2021"

build = "build.rs"

description = "GitHub Webhooks for Rust"
repository.workspace = true
authors.workspace = true
documentation = "https://sksat.github.io/github-webhook-rs/github_webhook"
readme = "../README.md"
license = "MIT"
# TODO: how to notice https://github.com/octokit/webhooks/blob/v6.8.0/LICENSE (MIT)

[package.metadata.octokit-webhooks]
repository = "octokit/webhooks"
version = "v6.10.0"

[build-dependencies]
github-webhook-dts-downloader.workspace = true
anyhow = "1.0.71"
cargo_metadata = "0.15.4"

[dependencies]
serde = "1.0.163"
serde_json = "1.0.96"
