[package]
name = "github-webhook"
version.workspace = true
rust-version = "1.64.0"
edition = "2021"

build = "build.rs"

description = "GitHub Webhooks for Rust"
repository.workspace = true
authors.workspace = true
documentation = "https://sksat.github.io/github-webhook-rs/github_webhook"
readme = "../README.md"
license = "MIT"
# TODO: how to notice https://github.com/octokit/webhooks/blob/v6.8.0/LICENSE (MIT)

[package.metadata.octokit-webhooks]
repository = "octokit/webhooks"
version = "v7.3.1"

[build-dependencies]
github-webhook-dts-downloader.workspace = true
github-webhook-type-generator.workspace = true
anyhow = "1.0.79"
cargo_metadata = "0.18.1"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
reqwest = "0.11.23"
