[package]
name = "github-webhook-type-generator"
version.workspace = true
rust-version = "1.64.0"
edition = "2021"

description = "GitHub webhook payload type generator for Rust"
repository.workspace = true
authors.workspace = true
license = "MIT"

[features]
default = ["serde"]
serde = []

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
structopt = "0.3.26"
swc_common = { version = "0.33.21", features = ["tty-emitter"]}
swc_ecma_ast = "0.112.6"
swc_ecma_parser = "0.143.11"
once_cell = "1.19.0"
