[package]
name = "github-webhook-type-generator"
version.workspace = true
rust-version = "1.65.0"
edition = "2021"

description = "GitHub webhook payload type generator for Rust"
repository.workspace = true
authors.workspace = true
license = "MIT"

[features]
default = ["serde"]
serde = []

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
clap = { version = "4.5.17", features = ["derive"] }
swc_common = { version = "0.34.0", features = ["tty-emitter"]}
swc_ecma_ast = "0.115.0"
swc_ecma_parser = "0.146.0"
once_cell = "1.19.0"
