[package]
name = "github-webhook-type-generator"
version.workspace = true
rust-version = "1.65.0"
edition = "2021"

description = "GitHub webhook payload type generator for Rust"
repository.workspace = true
authors.workspace = true
license = "MIT"

[features]
default = ["serde"]
serde = []

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
structopt = "0.3.26"
swc_common = { version = "0.40.0", features = ["tty-emitter"]}
swc_ecma_ast = "0.121.0"
swc_ecma_parser = "0.152.0"
once_cell = "1.19.0"
